anakonda/anakondaParser.java
// Generated from anakonda.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class anakondaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__7=1, T__6=2, T__5=3, T__4=4, T__3=5, T__2=6, T__1=7, T__0=8, PRINT=9, 
		READ=10, LCURLY=11, RCURLY=12, LROUND=13, RROUND=14, LSQUARE=15, RSQUARE=16, 
		SEMICOLON=17, BREAK=18, CONTINUE=19, RET=20, VOID=21, BOOL=22, INCREASE=23, 
		DECREASE=24, ADD=25, SUBTRACT=26, MULTIPLY=27, DIVIDE=28, MODULO=29, ADDASS=30, 
		SUBASS=31, MULASS=32, DIVASS=33, MODASS=34, GREATERTHAN=35, LESSTHAN=36, 
		LESSEQUAL=37, GREATEREQUAL=38, EQUAL=39, NOTEEQUAL=40, FOR=41, WHILE=42, 
		IF=43, ELIF=44, ELSE=45, AND=46, OR=47, NOT=48, INT=49, IN=50, CISLO=51, 
		VARNAME=52, CHAR=53, STRING=54, COMMENT=55, WHITESPACE=56, NEWLINE=57;
	public static final String[] tokenNames = {
		"<INVALID>", "'def'", "'string'", "'char'", "':'", "','", "'='", "'~'", 
		"'bool'", "'print'", "'read'", "'{'", "'}'", "'('", "')'", "'['", "']'", 
		"';'", "'break'", "'continue'", "'return'", "'void'", "BOOL", "'++'", 
		"'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'+='", "'-='", "'*='", "'/='", 
		"'%='", "'>'", "'<'", "'<='", "'>='", "'=='", "'!='", "'for'", "'while'", 
		"'if'", "'elif'", "'else'", "AND", "OR", "NOT", "'int'", "'in'", "CISLO", 
		"VARNAME", "CHAR", "STRING", "COMMENT", "WHITESPACE", "'\n'"
	};
	public static final int
		RULE_init = 0, RULE_block = 1, RULE_statement = 2, RULE_oneline_statement = 3, 
		RULE_block_statement = 4, RULE_var = 5, RULE_value = 6, RULE_type = 7, 
		RULE_normal_assign = 8, RULE_combined_assign = 9, RULE_assign = 10, RULE_increment = 11, 
		RULE_decrement = 12, RULE_define_fun = 13, RULE_extern_func_def = 14, 
		RULE_arguments = 15, RULE_typelist = 16, RULE_call_fun = 17, RULE_define_var = 18, 
		RULE_ret = 19, RULE_forcycle = 20, RULE_whilecycle = 21, RULE_ifblock = 22, 
		RULE_list = 23, RULE_parameters = 24, RULE_range = 25, RULE_print = 26, 
		RULE_read = 27, RULE_expression = 28;
	public static final String[] ruleNames = {
		"init", "block", "statement", "oneline_statement", "block_statement", 
		"var", "value", "type", "normal_assign", "combined_assign", "assign", 
		"increment", "decrement", "define_fun", "extern_func_def", "arguments", 
		"typelist", "call_fun", "define_var", "ret", "forcycle", "whilecycle", 
		"ifblock", "list", "parameters", "range", "print", "read", "expression"
	};

	@Override
	public String getGrammarFileName() { return "anakonda.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public anakondaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public Extern_func_defContext extern_func_def(int i) {
			return getRuleContext(Extern_func_defContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(anakondaParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(anakondaParser.SEMICOLON, i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public List<Extern_func_defContext> extern_func_def() {
			return getRuleContexts(Extern_func_defContext.class);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(58); extern_func_def();
					setState(59); match(SEMICOLON);
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__6) | (1L << T__5) | (1L << T__0) | (1L << PRINT) | (1L << READ) | (1L << LCURLY) | (1L << LROUND) | (1L << LSQUARE) | (1L << BREAK) | (1L << CONTINUE) | (1L << RET) | (1L << VOID) | (1L << BOOL) | (1L << ADD) | (1L << SUBTRACT) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << NOT) | (1L << INT) | (1L << CISLO) | (1L << VARNAME) | (1L << CHAR) | (1L << STRING))) != 0)) {
				{
				{
				setState(66); statement();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode RCURLY() { return getToken(anakondaParser.RCURLY, 0); }
		public TerminalNode LCURLY() { return getToken(anakondaParser.LCURLY, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(LCURLY);
			setState(74); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(73); statement();
				}
				}
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__6) | (1L << T__5) | (1L << T__0) | (1L << PRINT) | (1L << READ) | (1L << LCURLY) | (1L << LROUND) | (1L << LSQUARE) | (1L << BREAK) | (1L << CONTINUE) | (1L << RET) | (1L << VOID) | (1L << BOOL) | (1L << ADD) | (1L << SUBTRACT) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << NOT) | (1L << INT) | (1L << CISLO) | (1L << VARNAME) | (1L << CHAR) | (1L << STRING))) != 0) );
			setState(78); match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(anakondaParser.SEMICOLON, 0); }
		public Block_statementContext block_statement() {
			return getRuleContext(Block_statementContext.class,0);
		}
		public Oneline_statementContext oneline_statement() {
			return getRuleContext(Oneline_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(84);
			switch (_input.LA(1)) {
			case T__6:
			case T__5:
			case T__0:
			case PRINT:
			case READ:
			case LROUND:
			case LSQUARE:
			case BREAK:
			case CONTINUE:
			case RET:
			case VOID:
			case BOOL:
			case ADD:
			case SUBTRACT:
			case NOT:
			case INT:
			case CISLO:
			case VARNAME:
			case CHAR:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(80); oneline_statement();
				setState(81); match(SEMICOLON);
				}
				break;
			case T__7:
			case LCURLY:
			case FOR:
			case WHILE:
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(83); block_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Oneline_statementContext extends ParserRuleContext {
		public RetContext ret() {
			return getRuleContext(RetContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(anakondaParser.BREAK, 0); }
		public Define_varContext define_var() {
			return getRuleContext(Define_varContext.class,0);
		}
		public TerminalNode CONTINUE() { return getToken(anakondaParser.CONTINUE, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Oneline_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneline_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterOneline_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitOneline_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitOneline_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Oneline_statementContext oneline_statement() throws RecognitionException {
		Oneline_statementContext _localctx = new Oneline_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_oneline_statement);
		try {
			setState(94);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86); assign();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87); define_var();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88); expression(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(89); ret();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(90); print();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(91); read();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(92); match(BREAK);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(93); match(CONTINUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Block_statementContext extends ParserRuleContext {
		public IfblockContext ifblock() {
			return getRuleContext(IfblockContext.class,0);
		}
		public Define_funContext define_fun() {
			return getRuleContext(Define_funContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForcycleContext forcycle() {
			return getRuleContext(ForcycleContext.class,0);
		}
		public WhilecycleContext whilecycle() {
			return getRuleContext(WhilecycleContext.class,0);
		}
		public Block_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterBlock_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitBlock_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitBlock_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Block_statementContext block_statement() throws RecognitionException {
		Block_statementContext _localctx = new Block_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block_statement);
		try {
			setState(101);
			switch (_input.LA(1)) {
			case FOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(96); forcycle();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(97); whilecycle();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(98); ifblock();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 4);
				{
				setState(99); define_fun();
				}
				break;
			case LCURLY:
				enterOuterAlt(_localctx, 5);
				{
				setState(100); block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
	 
		public VarContext() { }
		public void copyFrom(VarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarNameContext extends VarContext {
		public TerminalNode VARNAME() { return getToken(anakondaParser.VARNAME, 0); }
		public VarNameContext(VarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterVarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitVarName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitVarName(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarListContext extends VarContext {
		public TerminalNode RSQUARE() { return getToken(anakondaParser.RSQUARE, 0); }
		public TerminalNode LSQUARE() { return getToken(anakondaParser.LSQUARE, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarListContext(VarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterVarList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitVarList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitVarList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		return var(0);
	}

	private VarContext var(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VarContext _localctx = new VarContext(_ctx, _parentState);
		VarContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_var, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new VarNameContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(104); match(VARNAME);
			}
			_ctx.stop = _input.LT(-1);
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VarListContext(new VarContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_var);
					setState(106);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(107); match(LSQUARE);
					setState(108); expression(0);
					setState(109); match(RSQUARE);
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	 
		public ValueContext() { }
		public void copyFrom(ValueContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValRangeContext extends ValueContext {
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public ValRangeContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterValRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitValRange(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitValRange(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValBoolContext extends ValueContext {
		public TerminalNode BOOL() { return getToken(anakondaParser.BOOL, 0); }
		public ValBoolContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterValBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitValBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitValBool(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValIntContext extends ValueContext {
		public TerminalNode CISLO() { return getToken(anakondaParser.CISLO, 0); }
		public ValIntContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterValInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitValInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitValInt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValCharContext extends ValueContext {
		public TerminalNode CHAR() { return getToken(anakondaParser.CHAR, 0); }
		public ValCharContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterValChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitValChar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitValChar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValStringContext extends ValueContext {
		public TerminalNode STRING() { return getToken(anakondaParser.STRING, 0); }
		public ValStringContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterValString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitValString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitValString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValListContext extends ValueContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ValListContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterValList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitValList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitValList(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValVarContext extends ValueContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public ValVarContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterValVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitValVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitValVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValVoidContext extends ValueContext {
		public TerminalNode VOID() { return getToken(anakondaParser.VOID, 0); }
		public ValVoidContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).enterValVoid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof anakondaListener ) ((anakondaListener)listener).exitValVoid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof anakondaVisitor ) return ((anakondaVisitor<? extends T>)visitor).visitValVoid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_value);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case VARNAME:
				_localctx = new ValVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(116); var(0);
				}
				break;
			case VOID:
				_localctx = new ValVoidContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117); match(VOID);
				}
				break;
			case BOOL:
				_localctx = new ValBoolContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(118); match(BOOL);
				}
				break;
			case CISLO:
				_localctx = new ValIntContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(119); match(CISLO);
				}
				break;
			case CHAR:
				_localctx = new ValCharContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(120); match(CHAR);
				}
				break;
			case STRING:
				_localctx = new ValStringContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(121); match(STRING);
				}
				break;
			case LSQUARE:
				_localctx = new ValListContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(122); list();
				}
				break;
			case LROUND:
				_localctx = new ValRangeContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(123); range();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
